--- a/shopppingcart.html
+++ b/shopppingcart.html
@@ -96,9 +96,9 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                     <div class="container" style="margin-top : 30px;" v-if="product_page">
-                            <li class="nav-item" v-on:click="ShowMyCart">
+                            <button class="nav-item" v-on:click="ShowMyCart">
                                 <a class="nav-link" href="#">My Cart ({{countitem}})</a>
-                            </li>
+                            </button> 
                     </div>
                 </div>
             </nav>
