--- a/shopppingcart.html
+++ b/shopppingcart.html
@@ -140,7 +140,7 @@
                 <div class="card-body">
                 <h5 class="card-title">{{product.name}}</h5>
                 <p class="card-text">
-                    ${{product.price}}
+                    {{product.price}}THB
                     <br/>
                     <small>
                     {{product.shortdesc}}
@@ -153,9 +153,9 @@
     </template>
 
     <template id="cartitem-template">
-        <div>{{item.name}} - {{item.count}}</div>
+        <div>{{item.name}} - {{item.count}} --->{{item.price*item.count}}THB </div>
+        <a class="btn btn-primary" href="#">Remove</a>
     </template>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/vue@next"></script>
     <!-- <script src="https://unpkg.com/vuex@4.0.0/dist/vuex.global.js"></script> -->
@@ -240,6 +240,7 @@
                         this.cart.push({
                             id: item.id,
                             name: item.name,
+                            price: item.price,
                             count: 1
                         })
                     }
